2008-06-16  Callum McKenzie  <callum@velociraptor.px.otago.ac.nz>

	* configure.in: 
	* NEWS: 2.23.3

2008-06-12  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Finally fix the build for people with gucharmap-2
	installed. Patch courtesy of Christian Persch. See bug #531298.
	Also fixed the configure summary to display the values properly.

2008-05-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in: Check for PolicyKit and PolicyKit-gnome as
	optional dependencies for cpufreq-applet. Bump dbus and dbus-glib
	requirements to 1.1.2 and 0.74.
	
2008-05-13  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.23.2

2008-05-02  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Add the Makefile for the invest applet docs
	directory.

2008-04-21  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in:
	* NEWS: 2.23.1

2008-04-13  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Prepare for a gucharmap API change.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: add back the libxml2 check (needed by sticky notes)

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for gweather >= 2.22.1, don't check for libxml2
	and the gweather locations file. End of bug #526216.

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Convert from glade to gtk-builder. Patch from Jaap
	Haitsma (bug #521082).

2008-03-13  Callum McKenzie  <callum@spooky-possum.org>

	* po-locations: Removed since it is now in libgweather (see bug
	#521078).
	* */.cvsignore: Remove all the old .cvsingore files since its been
	a while since we used CVS (also bug #521078).

2008-03-10  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.22.0

2008-02-26  Ryan Lortie  <desrt@desrt.ca>

	* configure.in:
	* NEWS: 2.21.92

2008-02-22  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: Build breakage fix: Re-add libgweather, removed in
	previous commit.
