@@ -1,3 +1,9 @@
+2008-07-19  Callum McKenzie  <callum@spooky-possum.org>
+
+	* configure.in:	
+	* Makefile.am: Base building of gweather conditional on
+	libgweather and not gnome_vfs.
+
 2008-06-16  Callum McKenzie  <callum@velociraptor.px.otago.ac.nz>
 
 	* configure.in: 
